--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Stellar-Hypnotherapy-15/">https://baay22.github.io/Stellar-Hypnotherapy-15/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Stellar+Hypnotherapy/Stellar+Hypnotherapy-15/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Stellar+Hypnotherapy/Stellar+Hypnotherapy-15/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Stellar+Hypnotherapy-15/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Stellar+Hypnotherapy-15/index.html</a><br>
+                <a target="_bLank" href="https://superlative-zabaione-3facee.netlify.app">https://superlative-zabaione-3facee.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
